--- a/sprint-2/unit-2/creating-animation/index.html
+++ b/sprint-2/unit-2/creating-animation/index.html
@@ -12,15 +12,6 @@
 
   <!--<script src="cipher.js"></script>-->
   <script src="js/app.js"></script>
-  <script>
-    window.onload = function() {
-      let main = document.getElementsByTagName('main')[0];
-      board.load(main,4,3);
-
-      document.addEventListener('keypress', function(e){
-        console.log(e.keypress);
-      });
-    };
-  </script>
+  <script src="js/index.js"></script>
 </body>
 </html>
