--- a/sprint-2/unit-2/creating-animation-learning-edition/index.html
+++ b/sprint-2/unit-2/creating-animation-learning-edition/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset=utf-8>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Animation</title>
+  <title>Snake!</title>
   <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
