simplified modal show-hide

--- a/sprint-2/unit-2/freelancer/index.html
+++ b/sprint-2/unit-2/freelancer/index.html
@@ -83,7 +83,7 @@
 			<div class="col-1"></div>
 		</div>
 
-		<div id="portafolioModal" class="modal">
+		<div id="portfolioModal" class="modal">
 			<div class="close">&times;</div>
 			<img src="assets/images/portfolio/game.png" alt="Freelancer - Game">
 			<div class="caption">Freelancer - Game</div>
