--- a/sprint-2/unit-2/freelancer/index.html
+++ b/sprint-2/unit-2/freelancer/index.html
@@ -30,7 +30,7 @@
 	<header class="container aqua text-white">
 		<div class="row">
 			<div class="col-12 align-center">
- 				<img src="assets/images/profile.png">
+ 				<img id="profile" src="assets/images/profile.png">
 			</div>
 		</div>
 		<div class="row">
