--- a/sprint-2/unit-2/firebase-snakes/index.html
+++ b/sprint-2/unit-2/firebase-snakes/index.html
@@ -9,8 +9,11 @@
 <body>
 
   <main></main>
-
+ 
+  <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase.js"></script>
   <script src="js/app.js"></script>
   <script src="js/index.js"></script>
+
+
 </body>
 </html>
