--- a/sprint-2/unit-2/firebase-snakes/index.html
+++ b/sprint-2/unit-2/firebase-snakes/index.html
@@ -7,8 +7,12 @@
   <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-
-  <main></main>
+  
+  <section id="select-player-modal">
+    <select id="player-select"></select>
+    <button type="button" id="join-button">Join Game</button>
+  </section>
+   <main></main>
  
   <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase.js"></script>
   <script src="js/app.js"></script>
