--- a/sprint-2/unit-2/firebase-snakes/index.html
+++ b/sprint-2/unit-2/firebase-snakes/index.html
@@ -8,16 +8,20 @@
 </head>
 <body>
   
-  <section id="select-player-modal">
-    <select id="player-select"></select>
-    <button type="button" id="join-button">Join Game</button>
-  </section>
-   <main></main>
- 
+  <form id="join-game-form">
+    <input type="text" id="name-input" tabindex="-1" value="" placeholder="username"/>
+    <select id="color-select"></select>
+    <button type="button" id="join-button"> Join Game :D </button>
+  </form>
+  <form id="leave-game-form">
+    <button type="button" id="leave-button"> Leave Game :( </button>
+  </form>
+  
+  <main></main>
+  <section id="players"></section>
   <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase.js"></script>
   <script src="js/app.js"></script>
   <script src="js/index.js"></script>
-
 
 </body>
 </html>
